; ModuleID = '/home/carl/AnghaBench/linux/arch/arm/mach-omap2/extr_prcm_mpu44xx.c_omap4_prcm_mpu_rmw_inst_reg_bits.c'
source_filename = "/home/carl/AnghaBench/linux/arch/arm/mach-omap2/extr_prcm_mpu44xx.c_omap4_prcm_mpu_rmw_inst_reg_bits.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @omap4_prcm_mpu_rmw_inst_reg_bits(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load i32, i32* %7, align 4
  %11 = load i32, i32* %8, align 4
  %12 = call i32 @omap4_prcm_mpu_read_inst_reg(i32 %10, i32 %11)
  store i32 %12, i32* %9, align 4
  %13 = load i32, i32* %5, align 4
  %14 = xor i32 %13, -1
  %15 = load i32, i32* %9, align 4
  %16 = and i32 %15, %14
  store i32 %16, i32* %9, align 4
  %17 = load i32, i32* %6, align 4
  %18 = load i32, i32* %9, align 4
  %19 = or i32 %18, %17
  store i32 %19, i32* %9, align 4
  %20 = load i32, i32* %9, align 4
  %21 = load i32, i32* %7, align 4
  %22 = load i32, i32* %8, align 4
  %23 = call i32 @omap4_prcm_mpu_write_inst_reg(i32 %20, i32 %21, i32 %22)
  %24 = load i32, i32* %9, align 4
  ret i32 %24
}

declare dso_local i32 @omap4_prcm_mpu_read_inst_reg(i32, i32) #1

declare dso_local i32 @omap4_prcm_mpu_write_inst_reg(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
